--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "start-device": "react-native start --host 192.168.1.5",
+    "start-all": "react-native start --host 0.0.0.0",
+    "test": "jest",
+    "postinstall": "node scripts/postinstall.js",
+    "adb-reverse": "adb reverse tcp:8081 tcp:8081 && adb reverse tcp:3000 tcp:3000"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -18,9 +22,9 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "react": "19.1.0",
-    "react-native": "0.80.0",
+    "react-native": "^0.80.0",
     "react-native-gesture-handler": "^2.26.0",
-    "react-native-reanimated": "^3.18.0",
+    "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-redux": "^9.2.0",
@@ -30,7 +34,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "19.0.0",
+    "@react-native-community/cli": "^19.0.0",
     "@react-native-community/cli-platform-android": "19.0.0",
     "@react-native-community/cli-platform-ios": "19.0.0",
     "@react-native/babel-preset": "0.80.0",
