--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.24.5",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
@@ -44,12 +45,13 @@
     "@react-native-community/cli": "^19.0.0",
     "@react-native-community/cli-platform-android": "19.0.0",
     "@react-native-community/cli-platform-ios": "19.0.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native/babel-preset": "0.80.0",
     "@react-native/eslint-config": "0.80.0",
     "@react-native/metro-config": "0.80.0",
     "@react-native/typescript-config": "0.80.0",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.8",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
